# Kaleidoscope

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.circleci/: Dockerfile  config.yml
.github/workflows/: cmake.yml
src/: lexer.cpp  main.cpp
src/ast/: ExprAST.cpp  ExprAST.h  NumberExprAST.cpp  NumberExprAST.h  VariableExprAST.cpp  VariableExprAST.h
src/ast/impl/: ExprAST.cpp  NumberExprAST.cpp  VariableExprAST.cpp
src/lexer/: Lexer.h
src/lexer/impl/: Lexer.cpp
src/parser/: BinaryExprAST.h  CallExprAST.h  ExprAST.h  FunctionAST.h  NumberExprAST.h  PrototypeAST.h  VariableExprAST.h
src/parser/impl/: BinaryExprAST.cpp  CallExprAST.cpp  ExprAST.cpp  FunctionAST.cpp  NumberExprAST.cpp  PrototypeAST.cpp  VariableExprAST.cpp
test/: CMakeLists.txt  Person.cpp  Person.h  Person.test.cpp  main.test.cpp  test_main.cpp  test_person.cpp
